--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,7 +3,7 @@ body {
     background-image: url("support/tbg.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-
+    cursor: url('support/tmouse.png'), auto;
     background-size: cover;
     color: black;
     font-family: verdana
