--- a/docs/styles.css
+++ b/docs/styles.css
@@ -18,11 +18,30 @@ li {
 h1 {
     color: black;
     font-family: "Trebuchet MS";
-    font-weight:100;
+    font-weight: 200;
     font-size: 40px;
 }
 p {
-        color: black;
+    color: black;
     font-family: "Trebuchet MS";
     font-size: 20px;
+}
+.blocka {
+    background: white;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-right: 1em;
+    padding-top: 0.0007em;
+}
+.pfp {
+    margin-left: auto;
+    margin-right: auto;
+    height: 250px;
+    float: left;
+    height: 8em;
+    padding-right: 1em;
+}
+.bio
+{
+    padding: 3em
 }
