updated icons/stylistic changes

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,6 +32,7 @@ p {
     padding-right: 1em;
     padding-right: 1em;
     padding-top: 0.0007em;
+        border-radius: 1em;
 }
 .pfp {
     margin-left: auto;
