updated icons/stylistic changes 2

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,17 +8,23 @@ body {
     color: black;
     font-family: verdana
 }
+a
+{
+    cursor: url('support/cmouse.png'), auto;
+}
 li {
     display: inline;
     padding-left: 50px;
 }
 .navbar {
     width: 300px;
+    text-decoration: none
 }
 h1 {
-    color: black;
+    padding-left: 1em;
+    color: white;
     font-family: "Trebuchet MS";
-    font-weight: 200;
+    font-weight: 700;
     font-size: 40px;
 }
 p {
@@ -30,9 +36,9 @@ p {
     background: white;
     padding-left: 1em;
     padding-right: 1em;
-    padding-right: 1em;
+    padding-bottom: 1em;
     padding-top: 0.0007em;
-        border-radius: 1em;
+    border-radius: 1em;
 }
 .pfp {
     margin-left: auto;
@@ -40,6 +46,13 @@ p {
     height: 250px;
     float: left;
     height: 8em;
+    padding-right: 1em;
+}
+.head {
+    margin-left: auto;
+    margin-right: auto;
+    height: 70px;
+    float: left;
     padding-right: 1em;
 }
 .bio
